Cleanup comments